<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/app_background"
    android:layout_height="match_parent"
    tools:context=".Add_Product">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_weight="10">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:textSize="18dp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="Category List"/>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/userdetail_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">
                </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView

                android:textSize="18dp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Name"/>
            <EditText
                android:textSize="15dp"
                android:textColor="#99000000"
                android:id="@+id/item_name"
                android:background="@drawable/tab_fragment_field"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/st_add_products_product_name"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textSize="18dp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Product Description"/>&gt;
            <EditText android:scrollbarStyle="insideInset" android:textSize="15dp" android:textColor="#99000000" android:gravity="start" android:id="@+id/product_description" android:background="@drawable/tab_fragment_field" android:padding="10dp" android:paddingLeft="20dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="90dp" android:layout_marginTop="2dp" android:hint="Enter Description..." android:minLines="10" android:singleLine="false" android:inputType="textMultiLine" android:overScrollMode="always"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textSize="18dp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/st_add_products_measuring_unit"/>&gt;
            <LinearLayout android:orientation="vertical" android:background="@drawable/tab_fragment_field" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp">
                <Spinner
                    android:id="@+id/spinner"
                    android:paddingBottom="0dp"
                    android:layout_width="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
                <TextView android:textSize="18dp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/st_add_products_available_stock"/>&gt;
                <EditText android:textSize="15dp" android:textColor="#99000000" android:id="@+id/existing_quantity" android:background="@drawable/tab_fragment_field" android:padding="10dp" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:hint="@string/st_add_products_available_stock" android:singleLine="true" android:maxLength="9" android:inputType="number" android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
                <TextView android:textSize="18dp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/st_add_products_purchase_cost"/>&gt;
                <EditText android:textSize="15dp" android:textColor="#99000000" android:id="@+id/purchase_cost" android:background="@drawable/tab_fragment_field" android:padding="10dp" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:hint="@string/st_add_products_purchase_cost" android:singleLine="true" android:maxLength="15" android:inputType="numberDecimal" android:textAlignment="center"/>
            </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textSize="18dp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/st_add_products_sale_price"/>&gt;
            <EditText android:textSize="15dp" android:textColor="#99000000" android:id="@+id/et_item_sale_price" android:background="@drawable/tab_fragment_field" android:padding="10dp" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:hint="@string/st_add_products_sale_price" android:singleLine="true" android:maxLength="15" android:inputType="numberDecimal" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textSize="18dp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Expiry Date"/>&gt;
            <TextView android:textSize="15dp" android:textColor="#99000000" android:id="@+id/tv_add_product_expiry" android:background="@drawable/tab_fragment_field" android:padding="10dp" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:hint="Expiry Date" android:singleLine="true" android:maxLength="15" android:textAlignment="center"/>
        </LinearLayout>




    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/cancel_item_main"
                android:background="@drawable/new_design_button_round"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_transparent"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton android:id="@+id/save_item_main"
                android:onClick="runCode"
                android:background="@drawable/new_design_button_round" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:src="@drawable/ic_done_transparent"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</LinearLayout>